--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li>Collaborated with a cross-functional team to design and implement blockchain solutions.</li></ul></p>
         </div> 
         <div class="project-img">
-          <img src="C:\Users\shilp\OneDrive\Desktop\portfolio placements\img\Goods-and-Services-Tax-Network-GSTN.png" alt="img">
+          <img src="Goods-and-Services-Tax-Network-GSTN.png" alt="img">
         </div>  
       </div>
       <div class="project-item">
