--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="C:\Users\shilp\OneDrive\Desktop\portfolio placements\img\IMG_20220904_203439_195.webp" alt="img">
+          <img src="IMG_20220904_203439_195.webp" alt="img">
         </div>
       </div>
       <div class="col-right">
