--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <li>Collaborated with team members to create impactful fundraising strategies and initiatives.</li></ul></p>
         </div>  
         <div class="project-img">
-          <img src="C:\Users\shilp\OneDrive\Desktop\portfolio placements\img\Screenshot_19-7-2024_15527_doc-14-7g-apps-viewer.googleusercontent.com.jpeg" alt="img">
+          <img src="Screenshot_19-7-2024_15527_doc-14-7g-apps-viewer.googleusercontent.com.jpeg" alt="img">
         </div>
       </div>
     </div>
