--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <li>Engaged in fundraising and sponsorship activities, supporting the society’s initiatives and outreach programs.</li></ul></p>
           </div>
           <div class="project-img">
-            <img src="C:\Users\shilp\OneDrive\Desktop\portfolio placements\img\tatsam.jpg" alt="img">
+            <img src="tatsam.jpg" alt="img">
           </div>
           
         </div>
