--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </ul></p>
           </div> 
           <div class="project-img">
-            <img src="C:\Users\shilp\OneDrive\Desktop\portfolio placements\img\shakesjeere.jpg" alt="img">
+            <img src="shakesjeere.jpg" alt="img">
           </div>
         </div>
       </div>
