--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <li>Played a key role in promoting the society's activities and engaging with a broader audience within and outside the university.</li></ul></p>
           </div>
           <div class="project-img">
-            <img src="C:\Users\shilp\OneDrive\Desktop\portfolio placements\img\Screenshot_19-7-2024_171648_www.bing.com.jpeg" alt="img">
+            <img src="Screenshot_19-7-2024_171648_www.bing.com.jpeg" alt="img">
           </div>
           
         </div>
