--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
+  <!-- Projects Section >
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -233,7 +233,7 @@
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
+   End Projects Section -->
 
   <!-- Contact Section -->
   <section id="contact">
