--- a/index.html
+++ b/index.html
@@ -181,11 +181,14 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>Blockchain	Implementation	in	the	existing	B2B	invoicing	model	of	GSTN	</h1>
+            <h2>Technologies used: Python, JavaScript, Flask, HTML and CSS.</h2>
+            <p><ul>
+        <li>Python for backend logic, JavaScript for interactive front-end functionality, Flask for backend API development,  HTML and CSS for structuring and styling the web interface.</li>
+        <li>Developed a private blockchain network with GSTN as the observer and IRPs as validators, utilizing SHA-256 for secure data hashing.</li>
+ <li>Created a web interface for invoice management and implemented Proof of Authority consensus for transaction validation.</li>
+ <li>Conducted performance testing to ensure system reliability, achieving low latency and high availability.</li>
+      </ul></p>
           </div>
           
         </div>
