--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
   </section>
 
-  <!-- Projects Section >
+  <!-- Projects Section >-->
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -190,7 +190,7 @@
  <li>Conducted performance testing to ensure system reliability, achieving low latency and high availability.</li>
       </ul></p>
           </div>
-          
+            <!--
         </div>
         <div class="project-item">
           <div class="project-info">
