--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
  <li>Conducted performance testing to ensure system reliability, achieving low latency and high availability.</li>
       </ul></p>
           </div>
-            <!--
+            
         </div>
+        <!--
         <div class="project-item">
           <div class="project-info">
             <h1>Project 2</h1>
@@ -230,13 +231,13 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
+          </div>-->
          
         </div>
       </div>
     </div>
   </section>
-   End Projects Section -->
+   
 
   <!-- Contact Section -->
   <section id="contact">
