--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       </ul></p>
           </div>
           <div class="project-img">
-          <img src="" alt="img">
+          <img src="WhatsApp Image 2024-07-10 at 11.56.52 PM (1).jpeg" alt="img">
         </div> 
             
         </div>
