--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </ul></p>
           </div>
           <div class="project-img">
-            <img src="WhatsApp Image 2024-07-10 at 11.56.52 PM (1).jpeg" alt="img">
+            <img src="project1.jpeg" alt="img">
           </div>
           
         </div>
