--- a/index.html
+++ b/index.html
@@ -200,15 +200,13 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Tatsam</h1>
-            <h2>The Hindi Society of NSUT</h2>
+            <h1>Portfolio	website	</h1>
+            <h2>Technologies used: HTML, CSS and  JavaScript.</h2>
             <p><ul>
-              <li>Played a pivotal role in organizing and facilitating workshops, cultural events, and literary sessions, promoting the richness of Hindi language and literature.</li>
-              <li>Fostered an inclusive and nurturing environment for new members, encouraging participation and creative expression.</li>
-              <li>Contributed to the successful execution of society events, enhancing teamwork, leadership, and organizational skills.</li>
-              <li>Actively participated in inter-college Hindi literature competitions, representing the society and showcasing linguistic proficiency.</li>
-              <li>Engaged in fundraising and sponsorship activities, supporting the society’s initiatives and outreach programs.</li></ul></p>
-          </div>
+              <li>Utilized HTML for structuring web content and ensuring semantic accuracy.</li>
+              <li>Applied CSS techniques for responsive design, animations, and layout management.</li>
+              <li>Implemented JavaScript to create interactive elements, enhance user experience, and enable dynamic content updates.</li>
+  
           <div class="project-img">
             <img src="tatsam.jpg" alt="img">
           </div>
