--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Advanced	Responsive	Social	Media	App	Using	MERN	Stack</h1>
-            <h2>Technologies used: HTML, CSS and  JavaScript.</h2>
+            <h2>Technologies used: HTML, CSS, JavaScript, MongoDB, Node.js, Express.js, react.js .</h2>
             <p><ul>
               <li>Actively participated in stand-up comedy events and workshops, honing performance and comedic writing skills.</li>
               <li>Assisted in organizing and managing comedy shows and open mic nights, demonstrating event planning and coordination abilities.</li>
