--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
               <li>Represented the society in inter-college stand-up competitions, showcasing creativity and humor on larger platforms.</li>
             </ul></p>
           </div> 
+
+          <div class="project-img">
+            <img src="" alt="img">
+          </div>
          
         </div>
       </div>
