--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           </div>
 
            <div class="project-img">
-            <img src="" alt="img">
+            <img src="Screenshot_21-7-2024_143250_shilpychaudhary0211.github.io.jpeg" alt="img">
           </div>
          
           
